Updates for Level 1-2-3-4 Breakout

--- a/force-app/main/default/layouts/Live_Approval__c-Live Approval Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Live_Approval__c-Live Approval Layout.layout-meta.xml
@@ -360,6 +360,10 @@
                 <behavior>Edit</behavior>
                 <field>Quote__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Level__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
